--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.6.2"
+    "angular": "^1.6.2",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {}
 }
