--- a/app/manifest.json
+++ b/app/manifest.json
@@ -28,7 +28,7 @@
         ,"style/main.css"
       ],
       "js": [
-        "bower_components/angular/angular-1.2.10.min.js"
+        "bower_components/angular/angular.min.js"
         ,"bower_components/jquery/dist/jquery.min.js"
         ,"scripts.babel/contentscript.js"
       ],
