--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,36 +1,29 @@
 {
-  "name": "__MSG_appName__",
-  "version": "0.0.1",
+  "name": "Bugzilla Board",
+  "version": "1.0.0",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "Kanban-style board for Bugzilla. https://github.com/bendl/bugzilla-board",
   "icons": {
-    "16": "images/icon-16.png",
-    "128": "images/icon-128.png"
+    // Icons by https://www.behance.net/teams/JustUI
+    "16": "images/_icon16.png",
+    "48": "images/_icon48.png",
+    "128": "images/_icon128.png"
   },
   "default_locale": "en",
-  "background": {
-    "scripts": [
-      "scripts.babel/chromereload.js"
-      ,"scripts.babel/background.js"
-    ]
-  },
-  "permissions": [
-    // None
-  ],
   "content_scripts": [
     {
       "matches": [
         "*://*/*buglist*"
       ],
       "css": [
-        "bower_components/angular/angular-csp.css"
-        ,"bower_components/bootstrap/dist/css/bootstrap.min.css"
-        ,"style/main.css"
+        "bower_components/angular/angular-csp.css",
+        "bower_components/bootstrap/dist/css/bootstrap.min.css",
+        "style/main.css"
       ],
       "js": [
-        "bower_components/angular/angular.min.js"
-        ,"bower_components/jquery/dist/jquery.min.js"
-        ,"scripts.babel/contentscript.js"
+        "bower_components/angular/angular.min.js",
+        "bower_components/jquery/dist/jquery.min.js",
+        "scripts.babel/contentscript.js"
       ],
       "html": [
         "templates/board.html"
@@ -41,7 +34,7 @@
   ],
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "web_accessible_resources": [
-    "templates/board.html"
-    ,"bower_components/angular/*"
+    "templates/board.html",
+    "bower_components/angular/*"
   ]
 }
